@@ -484,6 +484,7 @@
                 ofaAccountsFrame -> ofaAccountFrameBin
                 ofaAccountsPage -> ofaAccountPage
                 ofaAccountsBookBin -> ofaAccountBookBin
+                ofaAccountsBookRender -> ofaAccountBookRender
 
  845 2015-10- 1 have a UserCredentialsBin to be used in DossierLogin
                 and DossierOpen
