@@ -95,6 +95,7 @@
    - ofaAccountsFrame class is renamed to ofaAccountFrameBin (todo #844/850).
    - ofaAccountsPage class is renamed to ofaAccountPage (todo #844).
    - ofaAccountsBookBin class is renamed to ofaAccountBookBin (todo #844).
+   - ofaAccountsBookRender class is renamed to ofaAccountBookRender (todo #844).
 
 -----------------------------------------------------------------------
  Version 0.39
